--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
     },
     "require": {
         "fzaninotto/faker": "^1.7",
-        "twig/twig": "^2.0"
+        "twig/twig": "^2.0",
+        "symfony/dotenv": "^4.0"
     }
 }
